<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="controller"
            type="dev.whitedog.ejemplofoldable.ui.drag_and_drop.DragAndDropContract.Controller" />

        <variable
            name="viewModel"
            type="dev.whitedog.ejemplofoldable.ui.drag_and_drop.DragAndDropViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context="dev.whitedog.ejemplofoldable.ui.drag_and_drop.DragAndDropActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back"
                app:onNavigationClick="@{() -> controller.onVolverClick()}"
                app:title="@string/drag_and_drop" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_dragdrop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardFondoPrimary">

                <TextView
                    android:id="@+id/tv_dragdrop_titulo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimaryVariant"
                    android:gravity="center"
                    android:minHeight="35dp"
                    android:text="@string/mi_perfil"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ib_dragdrop_foto"
                    android:layout_width="136dp"
                    android:layout_height="136dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/boton_circular_gris_borde_1"
                    android:contentDescription="@string/imagen_de_perfil"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_dragdrop_titulo"
                    app:srcCompat="@drawable/ic_person_96" />

                <ImageButton
                    android:id="@+id/ib_dragdrop_quitar_foto"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/boton_circular_gris_borde_1"
                    android:contentDescription="@string/quitar_imagen_perfil"
                    android:onClick="@{() -> controller.onQuitarImagenClick()}"
                    android:visibility="invisible"
                    app:layout_constraintStart_toEndOf="@+id/ib_dragdrop_foto"
                    app:layout_constraintTop_toTopOf="@+id/ib_dragdrop_foto"
                    app:srcCompat="@drawable/ic_clear_24" />

                <TextView
                    android:id="@+id/tv_dragdrop_mensaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/arrastre_imagen_mensaje"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ib_dragdrop_foto" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>