<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="controller"
            type="dev.whitedog.ejemplofoldable.ui.app_continuity.view_model.ViewModelContract.Controller" />

        <variable
            name="viewModel"
            type="dev.whitedog.ejemplofoldable.ui.app_continuity.view_model.ViewModelVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.app_continuity.view_model.ViewModelActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_back"
                app:onNavigationClick="@{() -> controller.onVolverClick()}"
                app:title="@string/view_model" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_viewmodel_local"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/cl_viewmodel_visitante"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <TextView
                android:id="@+id/tv_viewmodel_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/local"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/b_viewmodel_local_mas"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mas"
                android:onClick="@{() -> controller.onModificarContadorLocalClick(1)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_viewmodel_local" />

            <TextView
                android:id="@+id/tv_viewmodel_local_contador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{String.valueOf(viewModel.contadorLocal)}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/b_viewmodel_local_mas"
                tools:text="@string/cero"/>

            <Button
                android:id="@+id/b_viewmodel_local_menos"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{() -> controller.onModificarContadorLocalClick(-1)}"
                android:text="@string/manos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_viewmodel_local_contador" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/div_viewmodel"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/cl_viewmodel_local"
            app:layout_constraintStart_toEndOf="@+id/cl_viewmodel_local"
            app:layout_constraintTop_toTopOf="@+id/cl_viewmodel_local" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_viewmodel_visitante"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cl_viewmodel_local"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <TextView
                android:id="@+id/tv_viewmodel_visitante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/visitante"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/b_viewmodel_visitante_mas"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mas"
                android:onClick="@{() -> controller.onModificarContadorVisitanteClick(1)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_viewmodel_visitante" />

            <TextView
                android:id="@+id/tv_viewmodel_visitante_contador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{String.valueOf(viewModel.contadorVisitante)}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/b_viewmodel_visitante_mas"
                tools:text="@string/cero"/>

            <Button
                android:id="@+id/b_viewmodel_visitante_menos"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{() -> controller.onModificarContadorVisitanteClick(-1)}"
                android:text="@string/manos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_viewmodel_visitante_contador" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/b_savedinstance_comprobar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/comprobar"
            android:onClick="@{() -> controller.onComprobarClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_viewmodel_local" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>